# pipecat

./: .gitignore  CMakePresets.json  Dockerfile  docker-compose.dev.yml  docker-compose.prod.yml  run-docker.sh
.history/: .dockerignore_20250310115216  .dockerignore_20250311060138  .dockerignore_20250311123821  .pre-commit-config_20250311152630.yaml  ARCHITECTURE_20250311064352.md  CMakeLists_20250311102235.txt  CMakeLists_20250311105358.txt  CMakeLists_20250311114521.txt  CMakeLists_20250311115441.txt  CMakePresets_20250312032653.json  CMakePresets_20250312041252.json  Dockerfile_20250310115216  Dockerfile_20250311052657  Makefile_20250311105358  Makefile_20250311153229  Makefile_20250311153735  README_20250311065024.md  docker-compose.dev_20250311131026.yml  docker-compose_20250311094357.yml  docker-compose_20250311123725.yml  docker-compose_20250311131018.yml  docker-compose_20250311131740.yml  import pickle_20250311073535.py  pyproject_20250311064352.toml  pyproject_20250311104626.toml
.history/.devcontainer/: devcontainer_20250311095923.json  devcontainer_20250311102429.json  devcontainer_20250311104935.json  devcontainer_20250311110108.json  devcontainer_20250311153229.json  devcontainer_20250311232856.json
.history/config/: .pre-commit-config_20250311065123.yaml  dot-env_20250311064743.template
.history/docker/: Dockerfile_20250311094151  Dockerfile_20250311095923.dev  Dockerfile_20250311104624.dev  Dockerfile_20250311105358.dev  Dockerfile_20250311123723  Dockerfile_20250311131025  Dockerfile_20250311221537  Dockerfile_20250311232820  entrypoint_20250311123757.sh
.history/response_ad025439-55e2-42e7-859a-f00d039323ea/: 0_20250312035940  (+2 more)
config/: codecov.yml
docker/: Dockerfile
nginx/: nginx.conf
scripts/: deploy.py  docker-deploy.py  docker-run.ps1  docker-run.sh  run-compose.ps1  setup-dev.sh
src/pipecat/extensions/audio_processing/: CMakeLists.txt
src/pipecat/extensions/audio_processing/src/: audio_processing.cpp
src/pipecat/extensions/optimized_processing/: CMakeLists.txt
src/pipecat/extensions/tracebacker/: CMakeLists.txt
src/pipecat/extensions/tracebacker/src/: call_stack.cpp  tracebacker.cpp
(+116 files in other folders)
